--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genesis</title>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
@@ -15,18 +20,19 @@
         <nav class="navbar">
             <div class="name">Genesis</div>
             <div class="nav">
-                <a href="/pages/projects.html">Projects</a>
-                <a href="/pages/contact.html">Contact</a>
+                <a href="/pages/projects.html" class="nav__link">Projects</a>
+                <a href="/pages/contact.html" class="nav__link">Contact</a>
             </div>
         </nav>
         <div>
             <div>
-                <p>Shooting Stars</p>
+                <p><span>Shooting Stars</span></p>
             </div>
             <div>
                 <h2>Hello, I’m Bakhtiyar Sattarov,
-                    product designer with experience
-                    in studios and startups</h2>
+                    <span>product designer</span> with experience
+                    in studios and startups
+                </h2>
             </div>
         </div>
         <div>
