--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,71 +7,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genesis projects</title>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/projects.css">
 </head>
 
-<div class="project">
-    <div class="project__title">
-        <h2>A fresh new title can make all the difference!</h2>
+<body>
+    <div class="project">
+        <div class="project__title">
+            <h2>A fresh new title can make all the difference!</h2>
+        </div>
+        <div class="project__txt-intro">
+            <p class="txt">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in
+                some form, by injected humour, or randomised words which don't look even slightly believable.
+            </p>
+            <p class="txt">
+                You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                generators on the Internet tend to repeat predefined chunks as necessary,
+                making this the first true generator on the Internet.
+                It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
+            </p>
+        </div>
+        <div class="project__info">
+            <table class="project__info__tbl">
+                <tr>
+                    <td class="tbl__1st-clmn">Project</td>
+                    <td class="tbl__2nd-clmn">Genesis Portfolio</td>
+                </tr>
+                <tr>
+                    <td class="tbl__1st-clmn">Design</td>
+                    <td class="tbl__2nd-clmn">Bakhtiyar Sattarov</td>
+                </tr>
+                <tr>
+                    <td class="tbl__1st-clmn">Client</td>
+                    <td class="tbl__2nd-clmn">Craftwork</td>
+                </tr>
+                <tr>
+                    <td class="tbl__1st-clmn">Deliverable</td>
+                    <td class="tbl__2nd-clmn">Website Design</td>
+                </tr>
+                <tr>
+                    <td class="tbl__1st-clmn">Year</td>
+                    <td class="tbl__2nd-clmn">2018</td>
+                </tr>
+                <tr>
+                    <td class="tbl__1st-clmn">Field</td>
+                    <td class="tbl__2nd-clmn">Branding, Personal</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <img src="/images/woman.png" alt="Walking woman">
+        </div>
+        <div class="project__txt">
+            <p class="txt">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration
+                in
+                some form, by injected humour, or randomised words which don't look even slightly believable.
+                If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
+                hidden in the middle of text.
+                You need to be sure there isn't anything embarrassing hidden in the middle of text.
+            </p>
+        </div>
+        <div>
+            <img src="/images/island.png" alt="Island">
+        </div>
+        <div>
+            <img src="/images/flowers.png" alt="A vase with flowers">
+        </div>
+        <div>
+            <img src="/images/door.png" alt="A mysteries door">
+        </div>
     </div>
-    <div class="project__text-intro">
-        <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-            some form, by injected humour, or randomised words which don't look even slightly believable.
-        </p>
-        <p>
-            You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-            generators on the Internet tend to repeat predefined chunks as necessary,
-            making this the first true generator on the Internet.
-            It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
-        </p>
-    </div>
-    <div class="project__info">
-        <table class="project__info__tbl">
-            <tr>
-                <td class="tbl__1st-clmn">Project</td>
-                <td class="tbl__2nd-clmn">Genesis Portfolio</td>
-            </tr>
-            <tr>
-                <td class="tbl__1st-clmn">Design</td>
-                <td class="tbl__2nd-clmn">Bakhtiyar Sattarov</td>
-            </tr>
-            <tr>
-                <td class="tbl__1st-clmn">Client</td>
-                <td class="tbl__2nd-clmn">Craftwork</td>
-            </tr>
-            <tr>
-                <td class="tbl__1st-clmn">Deliverable</td>
-                <td class="tbl__2nd-clmn">Website Design</td>
-            </tr>
-            <tr>
-                <td class="tbl__1st-clmn">Year</td>
-                <td class="tbl__2nd-clmn">2018</td>
-            </tr>
-            <tr>
-                <td class="tbl__1st-clmn">Field</td>
-                <td class="tbl__2nd-clmn">Branding, Personal</td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <img src="/images/woman.png" alt="Walking woman">
-    </div>
-    <div class="project__text">
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-            some form, by injected humour, or randomised words which don't look even slightly believable.
-            If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
-            hidden in the middle of text.
-            You need to be sure there isn't anything embarrassing hidden in the middle of text.
-        </p>
-    </div>
-    <div>
-        <img src="/images/island.png" alt="Island">
-    </div>
-    <div>
-        <img src="/images/flowers.png" alt="A vase with flowers">
-    </div>
-    <div>
-        <img src="/images/door.png" alt="A mysteries door">
-    </div>
-</div>
+
+
+</body>
