--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="name">Genesis</div>
+            <div class="name"> <a href="/index.html" class="name">Genesis</a></div>
             <div class="nav">
-                <a href="/pages/projects.html" class="nav__link">Projects</a>
-                <a href="/pages/contact.html" class="nav__link">Contact</a>
+                <ul>
+                    <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                </ul>
             </div>
         </nav>
+    </header>
+
+
+    <main>
         <div>
             <div>
                 <p><span>Shooting Stars</span></p>
@@ -38,8 +44,6 @@
         <div>
             <p>Design is about progress</p>
         </div>
-    </header>
-    <main>
         <div class="gallery">
             <div class="gallery__item first">
                 <img src="/images/statue.png" alt="" class="gallery__img">
@@ -157,16 +161,22 @@
             </div>
         </div>
 
-        <footer class="footer">
-            <div class="name">Genesis</div>
-            <div class="nav">
-                <a href="/pages/projects.html">Projects</a>
-                <a href="/pages/contact.html">Contact</a>
-            </div>
-            <div class="social">
-                <a href="#"><img src="/images/basketball.png" alt="basketball logo"></a>
-                <a href="#"><img src="/images/instagram.png" alt="instagram logo"></a>
-                <a href="#"><img src="/images/twitter.png" alt="twitter logo"></a>
+        <footer>
+            <div class="footer">
+                <div class="name"> <a href="index.html" class="name">Genesis</a></div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                        <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <ul>
+                        <li><a href="#"><img src="/images/basketball.png" alt="basketball logo"></a></li>
+                        <li><a href="#"><img src="/images/instagram.png" alt="instagram logo"></a></li>
+                        <li><a href="#"><img src="/images/twitter.png" alt="twitter logo"></a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
 </body>
