--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,10 +11,57 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/contact.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="name"> <a href="/index.html" class="navbar_name">Genesis</a></div>
+            <div class="nav">
+                <ul>
+                    <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="contact">
+        <div class="contact__title">
+            <h2>Full set of great features to make your product fresh</h2>
+        </div>
+        <div class="contact__txt">
+            <p class="txt">Our favorite brands are our friends! We help them to achieve their goals, they help us to
+                stay sharp.</p>
+        </div>
+        <div class="contact__form">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Message">
+            <button type="submit" class="contact__btn">Submit</button>
+        </div>
+        <div class="contact__img">
+            <img src="/images/map.png" alt="Map over Broadway Triangle">
+        </div>
+    </div>
 
+    <footer>
+        <div class="footer">
+            <div class="name"> <a href="index.html" class="name">Genesis</a></div>
+            <div class="nav">
+                <ul>
+                    <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><img src="/images/basketball.png" alt="basketball logo"></a></li>
+                    <li><a href="#"><img src="/images/instagram.png" alt="instagram logo"></a></li>
+                    <li><a href="#"><img src="/images/twitter.png" alt="twitter logo"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
