--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,11 +11,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/projects.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="name"> <a href="/index.html" class="navbar_name">Genesis</a></div>
+            <div class="nav">
+                <ul>
+                    <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="project">
         <div class="project__title">
             <h2>A fresh new title can make all the difference!</h2>
@@ -85,5 +96,23 @@
         </div>
     </div>
 
+    <footer>
+        <div class="footer">
+            <div class="name"> <a href="index.html" class="name">Genesis</a></div>
+            <div class="nav">
+                <ul>
+                    <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav__link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><img src="/images/basketball.png" alt="basketball logo"></a></li>
+                    <li><a href="#"><img src="/images/instagram.png" alt="instagram logo"></a></li>
+                    <li><a href="#"><img src="/images/twitter.png" alt="twitter logo"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 </body>
