--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
             <img src="/images/map.png" alt="Map over Broadway Triangle">
         </div>
     </div>
-
+    </main>
     <footer>
         <div class="footer">
             <div class="name"> <a href="index.html" class="name">Genesis</a></div>
