--- a/pages/projects.html
+++ b/pages/projects.html
@@ -95,7 +95,7 @@
             <img src="/images/door.png" alt="A mysteries door">
         </div>
     </div>
-
+    </main>
     <footer>
         <div class="footer">
             <div class="name"> <a href="index.html" class="name">Genesis</a></div>
