--- a/index.html
+++ b/index.html
@@ -81,22 +81,18 @@
                 <img src="/images/island.png" alt="" class="gallery__img">
             </div>
         </div>
-        <div class="container-service">
-            <div>
+        <div class="service">
+            <div class="service__txt">
                 <p>We love work hard and explore new things that’s why we cover lot of things.
                     Check our service list and view details</p>
             </div>
             <div>
-                <ul>
+                <ul class="service__list">
                     <li>Multimedia</li>
                     <li>Interactive Design</li>
-                    <li>Packaging</li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>Creative design</li>
                     <li>Branding</li>
+                    <li>Creative design</li>
+                    <li>Packaging</li>
                     <li>Coding</li>
                 </ul>
             </div>
