--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="name"> <a href="/index.html" class="name">Genesis</a></div>
+            <div class="navbar__name"> <a href="/index.html" class="name">Genesis</a></div>
             <div class="nav">
                 <ul>
                     <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
@@ -97,63 +97,64 @@
                 </ul>
             </div>
         </div>
+        <hr>
         <div class="awards">
-            <div class="container-first">
-                <div>
+            <div class="awards-first">
+                <div class="awards-first__item1">
                     <h3>Awwwards</h3>
                 </div>
-                <div>
+                <div class="awards-first__item2">
                     <h4>Site of the day</h4>
                 </div>
-                <div>
+                <div class="awards-first__item3">
                     <h5>Genesis UI Kit</h5>
+                    <p class="awards__txt">Application that helps to find nearest sport centres
+                        in your area</p>
                 </div>
-                <div>
+                <div class="awards-first__item4">
                     <h5>2018</h5>
                 </div>
-            </div>
-            <div class="container-second">
-                <div>
-                    <h3></h3>
-                </div>
-                <div>
+                <div class="awards-first__item5">
                     <h4>Best navigation</h4>
                 </div>
-                <div>
+                <div class="awards-first__item6">
                     <h5>Genesis Template</h5>
+                    <p class="awards__txt">Application that helps to find nearest sport centres
+                        in your area</p>
                 </div>
-                <div>
+                <div class="awards-first__item7">
                     <h5>2018</h5>
                 </div>
             </div>
-            <div class="container-third">
-                <div>
-                    <h3>CSSDesignAwards</h3>
+            <hr>
+            <div class="awards-second">
+                <div class="awards-second__item1">
+                    <h3 class="awards-second__title">CSSDesignAwards</h3>
                 </div>
-                <div>
+                <div class="awards-second__item2">
                     <h4>Site of the day</h4>
                 </div>
-                <div>
+                <div class="awards-second__item3">
                     <h5>Genesis UI Kit</h5>
+                    <p class="awards__txt">Application that helps to find nearest sport centres
+                        in your area</p>
                 </div>
-                <div>
+                <div class="awards-second__item4">
                     <h5>2017</h5>
                 </div>
-            </div>
-            <div class="container-forth">
-                <div>
-                    <h3></h3>
-                </div>
-                <div>
+                <div class="awards-second__item5">
                     <h4>Best navigation</h4>
                 </div>
-                <div>
+                <div class="awards-second__item6">
                     <h5>Genesis Template</h5>
+                    <p class="awards__txt">Application that helps to find nearest sport centres
+                        in your area</p>
                 </div>
-                <div>
+                <div class="awards-second__item7">
                     <h5>2016</h5>
                 </div>
             </div>
+            <hr>
         </div>
     </main>
     <footer>
