--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="name"> <a href="/index.html" class="navbar_name">Genesis</a></div>
+            <div class="navbar__name"> <a href="/index.html" class="name">Genesis</a></div>
             <div class="nav">
                 <ul>
                     <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="name"> <a href="index.html" class="name">Genesis</a></div>
+            <div class="name"><a href="index.html" class="name">Genesis</a></div>
             <div class="nav">
                 <ul>
                     <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
