--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="name"> <a href="/index.html" class="navbar_name">Genesis</a></div>
+            <div class="navbar__name"> <a href="/index.html" class="name">Genesis</a></div>
             <div class="nav">
                 <ul>
                     <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
@@ -31,19 +31,7 @@
         <div class="project__title">
             <h2>A fresh new title can make all the difference!</h2>
         </div>
-        <div class="project__txt-intro">
-            <p class="txt">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in
-                some form, by injected humour, or randomised words which don't look even slightly believable.
-            </p>
-            <p class="txt">
-                You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                generators on the Internet tend to repeat predefined chunks as necessary,
-                making this the first true generator on the Internet.
-                It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
-            </p>
-        </div>
+
         <div class="project__info">
             <table class="project__info__tbl">
                 <tr>
@@ -72,33 +60,49 @@
                 </tr>
             </table>
         </div>
-        <div>
-            <img src="/images/woman.png" alt="Walking woman">
-        </div>
-        <div class="project__txt">
-            <p class="txt">There are many variations of passages of Lorem Ipsum available, but the majority have
-                suffered alteration
-                in
+        <div class="project__txt-intro">
+            <p class="txt">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in
                 some form, by injected humour, or randomised words which don't look even slightly believable.
-                If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
-                hidden in the middle of text.
-                You need to be sure there isn't anything embarrassing hidden in the middle of text.
+            </p>
+            <p class="txt">
+                You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                generators on the Internet tend to repeat predefined chunks as necessary,
+                making this the first true generator on the Internet.
+                It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
             </p>
         </div>
-        <div>
+    </div>
+    <div class="project__img-big">
+        <img src="/images/woman.png" alt="Walking woman" class="project-img-big">
+    </div>
+    <div class="project__txt">
+        <p class="txt">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration
+            in
+            some form, by injected humour, or randomised words which don't look even slightly believable.
+            If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
+            hidden in the middle of text.
+            You need to be sure there isn't anything embarrassing hidden in the middle of text.
+        </p>
+    </div>
+    <div class="project__img-small">
+        <div class="project__img">
             <img src="/images/island.png" alt="Island">
         </div>
-        <div>
+        <div class="project__img">
             <img src="/images/flowers.png" alt="A vase with flowers">
         </div>
-        <div>
+        <div class="project__img">
             <img src="/images/door.png" alt="A mysteries door">
         </div>
     </div>
+
     </main>
     <footer>
         <div class="footer">
-            <div class="name"> <a href="index.html" class="name">Genesis</a></div>
+            <div class="name"><a href="index.html" class="name">Genesis</a></div>
             <div class="nav">
                 <ul>
                     <li><a href="/pages/projects.html" class="nav__link">Projects</a></li>
