--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,18 +28,19 @@
         </nav>
     </header>
     <div class="contact">
-        <div class="contact__title">
-            <h2>Full set of great features to make your product fresh</h2>
-        </div>
-        <div class="contact__txt">
-            <p class="txt">Our favorite brands are our friends! We help them to achieve their goals, they help us to
-                stay sharp.</p>
-        </div>
-        <div class="contact__form">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Email">
-            <input type="text" placeholder="Message">
-            <button type="submit" class="contact__btn">Submit</button>
+        <div class="contact__info">
+            <div class="contact__txt">
+                <h2>Full set of great features to make your product fresh</h2>
+                <p class="txt">Our favorite brands are our friends! We help them to achieve their goals, they help us to
+                    stay sharp.</p>
+            </div>
+
+            <div class="contact__form">
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Message">
+                <button type="submit" class="contact__btn">Submit</button>
+            </div>
         </div>
         <div class="contact__img">
             <img src="/images/map.png" alt="Map over Broadway Triangle">
