max-width and icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/index.css">
+    <script src="https://kit.fontawesome.com/8df6a3840c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -45,40 +46,40 @@
         </div>
         <div class="gallery">
             <div class="gallery__item first">
-                <img src="/images/statue.png" alt="" class="gallery__img">
+                <img src="/images/statue.png" alt="Statue" class="gallery__img">
             </div>
             <div class="gallery__item second">
-                <img src="/images/glasses.png" alt="" class="gallery__img">
+                <img src="/images/glasses.png" alt="Boy with glasses" class="gallery__img">
             </div>
             <div class="gallery__item third">
-                <img src="/images/sleeping.png" alt="" class="gallery__img">
+                <img src="/images/sleeping.png" alt="Sleeping boy with flowers in his face" class="gallery__img">
             </div>
             <div class="gallery__item fourth">
-                <img src="/images/catuses.png" alt="" class="gallery__img">
+                <img src="/images/cactuses.png" alt="Boy with blue balloon sitting on cactuses" class="gallery__img">
             </div>
             <div class="gallery__item fifth">
-                <img src="/images/liberty.png" alt="" class="gallery__img">
+                <img src="/images/liberty.png" alt="Liberty statue" class="gallery__img">
             </div>
             <div class="gallery__item sixth">
-                <img src="/images/silvermask.png" alt="" class="gallery__img">
+                <img src="/images/silvermask.png" alt="Man with a silver mask" class="gallery__img">
             </div>
             <div class="gallery__item seventh">
-                <img src="/images/chrysalis.png" alt="" class="gallery__img">
+                <img src="/images/chrysalis.png" alt="Small person standing on a persons head" class="gallery__img">
             </div>
             <div class="gallery__item eigth">
-                <img src="/images/woman.png" alt="" class="gallery__img">
+                <img src="/images/woman.png" alt="Woman walking" class="gallery__img">
             </div>
             <div class="gallery__item ninth">
-                <img src="/images/piano.png" alt="" class="gallery__img">
+                <img src="/images/piano.png" alt="Child on a swing haning from a piano" class="gallery__img">
             </div>
             <div class="gallery__item tenth">
-                <img src="/images/flowerfield.png" alt="" class="gallery__img">
+                <img src="/images/flowerfield.png" alt="Man walking in a flower field in sunset" class="gallery__img">
             </div>
             <div class="gallery__item eleventh">
-                <img src="/images/dessert.png" alt="" class="gallery__img">
+                <img src="/images/dessert.png" alt="Woman walking on sand in sunset" class="gallery__img">
             </div>
             <div class="gallery__item twelfth">
-                <img src="/images/island.png" alt="" class="gallery__img">
+                <img src="/images/island.png" alt="Island from abowe" class="gallery__img">
             </div>
         </div>
         <div class="service">
@@ -168,9 +169,9 @@
             </div>
             <div class="social">
                 <ul>
-                    <li><a href="#"><img src="/images/basketball.png" alt="basketball logo"></a></li>
-                    <li><a href="#"><img src="/images/instagram.png" alt="instagram logo"></a></li>
-                    <li><a href="#"><img src="/images/twitter.png" alt="twitter logo"></a></li>
+                    <li><a href="#"><i class="fa-solid fa-basketball"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
