--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/projects.css">
+    <script src="https://kit.fontawesome.com/8df6a3840c.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -27,77 +29,80 @@
             </div>
         </nav>
     </header>
-    <div class="project">
-        <div class="project__title">
-            <h2>A fresh new title can make all the difference!</h2>
-        </div>
 
-        <div class="project__info">
-            <table class="project__info__tbl">
-                <tr>
-                    <td class="tbl__1st-clmn">Project</td>
-                    <td class="tbl__2nd-clmn">Genesis Portfolio</td>
-                </tr>
-                <tr>
-                    <td class="tbl__1st-clmn">Design</td>
-                    <td class="tbl__2nd-clmn">Bakhtiyar Sattarov</td>
-                </tr>
-                <tr>
-                    <td class="tbl__1st-clmn">Client</td>
-                    <td class="tbl__2nd-clmn">Craftwork</td>
-                </tr>
-                <tr>
-                    <td class="tbl__1st-clmn">Deliverable</td>
-                    <td class="tbl__2nd-clmn">Website Design</td>
-                </tr>
-                <tr>
-                    <td class="tbl__1st-clmn">Year</td>
-                    <td class="tbl__2nd-clmn">2018</td>
-                </tr>
-                <tr>
-                    <td class="tbl__1st-clmn">Field</td>
-                    <td class="tbl__2nd-clmn">Branding, Personal</td>
-                </tr>
-            </table>
+    <main>
+        <div class="project">
+            <div class="project__title">
+                <h2>A fresh new title can make all the difference!</h2>
+            </div>
+
+            <div class="project__info">
+                <table class="project__info__tbl">
+                    <tr>
+                        <td class="tbl__1st-clmn">Project</td>
+                        <td class="tbl__2nd-clmn">Genesis Portfolio</td>
+                    </tr>
+                    <tr>
+                        <td class="tbl__1st-clmn">Design</td>
+                        <td class="tbl__2nd-clmn">Bakhtiyar Sattarov</td>
+                    </tr>
+                    <tr>
+                        <td class="tbl__1st-clmn">Client</td>
+                        <td class="tbl__2nd-clmn">Craftwork</td>
+                    </tr>
+                    <tr>
+                        <td class="tbl__1st-clmn">Deliverable</td>
+                        <td class="tbl__2nd-clmn">Website Design</td>
+                    </tr>
+                    <tr>
+                        <td class="tbl__1st-clmn">Year</td>
+                        <td class="tbl__2nd-clmn">2018</td>
+                    </tr>
+                    <tr>
+                        <td class="tbl__1st-clmn">Field</td>
+                        <td class="tbl__2nd-clmn">Branding, Personal</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="project__txt-intro">
+                <p class="txt">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in
+                    some form, by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+                <p class="txt">
+                    You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem
+                    Ipsum
+                    generators on the Internet tend to repeat predefined chunks as necessary,
+                    making this the first true generator on the Internet.
+                    It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
+                </p>
+            </div>
         </div>
-        <div class="project__txt-intro">
-            <p class="txt">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in
+        <div class="project__img-big">
+            <img src="/images/woman.png" alt="Walking woman" class="project-img-big">
+        </div>
+        <div class="project__txt">
+            <p class="txt">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration
+                in
                 some form, by injected humour, or randomised words which don't look even slightly believable.
-            </p>
-            <p class="txt">
-                You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                generators on the Internet tend to repeat predefined chunks as necessary,
-                making this the first true generator on the Internet.
-                It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.
+                If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
+                hidden in the middle of text.
+                You need to be sure there isn't anything embarrassing hidden in the middle of text.
             </p>
         </div>
-    </div>
-    <div class="project__img-big">
-        <img src="/images/woman.png" alt="Walking woman" class="project-img-big">
-    </div>
-    <div class="project__txt">
-        <p class="txt">There are many variations of passages of Lorem Ipsum available, but the majority have
-            suffered alteration
-            in
-            some form, by injected humour, or randomised words which don't look even slightly believable.
-            If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing
-            hidden in the middle of text.
-            You need to be sure there isn't anything embarrassing hidden in the middle of text.
-        </p>
-    </div>
-    <div class="project__img-small">
-        <div class="project__img">
-            <img src="/images/island.png" alt="Island">
+        <div class="project__img-small">
+            <div class="project__item">
+                <img class="project__img" src="/images/island.png" alt="Island">
+            </div>
+            <div class="project__item">
+                <img class="project__img" src="/images/flowers.png" alt="A vase with flowers">
+            </div>
+            <div class="project__item">
+                <img class="project__img" src="/images/door.png" alt="A mysteries door">
+            </div>
         </div>
-        <div class="project__img">
-            <img src="/images/flowers.png" alt="A vase with flowers">
-        </div>
-        <div class="project__img">
-            <img src="/images/door.png" alt="A mysteries door">
-        </div>
-    </div>
 
     </main>
     <footer>
@@ -111,12 +116,14 @@
             </div>
             <div class="social">
                 <ul>
-                    <li><a href="#"><img src="/images/basketball.png" alt="basketball logo"></a></li>
-                    <li><a href="#"><img src="/images/instagram.png" alt="instagram logo"></a></li>
-                    <li><a href="#"><img src="/images/twitter.png" alt="twitter logo"></a></li>
+                    <li><a href="#"><i class="fa-solid fa-basketball"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
     </footer>
 
 </body>
+
+</html>
